Overwritten createCharacter method
1. Added Reflections dependency to pom.xml.
2. In CharacterFactory.java method createCharacter is implemented via
reflections to return random Character.